# color_matching_and_skin_detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
color_detection/: image_hsv_threshold_picker.py  video_color_detection.py
kivy_files/: kivy_fd_keypress_test.py  kivy_fd_touch_test.py
skin_and_finger_detection/: video_fingertip_detection.py  video_skin_detection.py
src/: live_video_fingertip_detection.py  live_video_skin_detection.py
src/util/: color_space_conv.py
src_kivy/: kivy_fd_keypress_test.py  kivy_fd_touch_test.py
